Created two different menus for mobile and desktop, while updating all UI/UX features

--- a/aboutus.html
+++ b/aboutus.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="icon" type="image/png" sizes="32x32" href="images/YD-icon.png">
+    <link rel="icon" href="images/YD-icon.png">
 
     <title>About Us | York Durham Counselling</title>
-    <link rel="stylesheet" href="css/index.css"/>
     <link rel="stylesheet" href="css/aboutus.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
     <div class="bubble-layer">
@@ -23,8 +23,8 @@
         <div class="bubble bubble-small" src="images/bubble.png"></div>
     </div>
 
-    <nav class="slide-menu">
-        <button class="slide-toggle" type="button" style="top:24rem;"></button>
+    <nav class="menu menu-slide">
+        <div class="slide-toggle" type="button" style="top:19.5rem;"></div>
         <a class="nav-option" href="index.html">Home</a>
         <a class="nav-option" href="ourmission.html">Our Mission</a>
         <a class="nav-option chosen-option" href="aboutus.html">About Us</a>
@@ -102,7 +102,7 @@
         <tbody>
             <tr class="section-row">
                 <td class="text-cell" colspan="2">
-                    <h2 class="section-title gap-fix">Contact & Location</h2>
+                    <h2 class="contact-title">Contact & Location</h2>
                 </td>
             </tr>
             <tr class="section-row">
@@ -131,9 +131,9 @@
                         <tbody>
                             <tr class="contact-icons-row">
                                 <td class="contact-info icon-cell">
-                                <a href="mailto:yorkdurhamcounselling@gmail.com" target="_blank">
-                                    <img class="icon-image" src="images/email-icon.png" alt="Email">
-                                </a>
+                                    <a href="mailto:yorkdurhamcounselling@gmail.com" target="_blank">
+                                        <img class="icon-image" src="images/email-icon.png" alt="Email">
+                                    </a>
                                 </td>
                                 <td class="contact-info icon-cell">
                                     <a href="https://www.instagram.com/yorkdurhamcounselling/" target="_blank">
