--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="images/YD-icon.png">
+    <link rel="icon" href="images/YD-icon.png">
     
     <title>Home | York Durham Counselling</title>
     <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
     <div class="bubble-layer">
@@ -22,8 +23,8 @@
         <div class="bubble bubble-small" src="images/bubble.png"></div>
     </div>
 
-    <div class="slide-menu">
-        <button class="slide-toggle" type="button" style="top:2rem;"></button>
+    <div class="menu menu-slide">
+        <div class="slide-toggle" type="button" style="top:2rem;"></div>
         <a class="nav-option chosen-option" href="index.html">Home</a>
         <a class="nav-option" href="ourmission.html">Our Mission</a>
         <a class="nav-option" href="aboutus.html">About Us</a>
@@ -36,8 +37,8 @@
         <tbody>
             <tr class="section-row">
                 <td class="text-cell" width="50%">
-                    <h2 class="section-title">Welcome to York Durham Counselling!</h2>
-                    <h3 class="section-subtitle">"Compassionate Client Care Meets Expert Therapy"</h3>
+                    <h2 class="home-title">Welcome to York Durham Counselling!</h2>
+                    <h3 class="home-subtitle">"Compassionate Client Care Meets Expert Therapy"</h3>
                 </td>
                 <td class="image-cell" width="50%" align="center">
                     <img class="section-image logo-image" src="images/YD-logo.png">
@@ -54,7 +55,7 @@
                 </td>
 
                 <td class="text-cell" width="50%">
-                    <h2 class="section-title">Why choose York Durham Counselling?</h2>
+                    <h2 class="home-title">Why choose York Durham Counselling?</h2>
                     
                     <ul class="benefits-list">
                         <li><strong>Expertise:</strong> All of the therapists that work for York Durham Counselling have a minimum of 20 years direct clinical experience and remain up to date on advancements in their field.</li>
@@ -71,11 +72,11 @@
         <tbody>
             <tr class="section-row">
                 <td class="text-cell" colspan="2">
-                    <h2 class="section-title gap-fix">Contact & Location</h2>
+                    <h2 class="contact-title">Contact & Location</h2>
                 </td>
             </tr>
             <tr class="section-row">
-                <td class="text-cell" style="width: 59.0501%;">
+                <td class="text-cell">
                     <table class="contact-table">
                         <tbody>
                             <tr class="contact-row">
@@ -87,11 +88,11 @@
                                     <h3 class="contact-heading">289-588-3559</h3>
                                 </td>
                                 <td class="hours-info">
-                                    <h3 class="contact-heading">Monday - Friday: 4pm - 8pm</h3>
-                                    <h3 class="contact-heading">Saturday: 10am - 3pm</h3>
-                                    <h3 class="contact-heading">Sunday: 10am - 3pm</h3>
-                                    <h3 class="contact-heading">*Hours subject to change</h3>
-                                    <h3 class="contact-heading">**All Sessions ONLINE</h3>
+                                    <h3 class="contact-heading">MON - FRI: 4pm - 8pm</h3>
+                                    <h3 class="contact-heading">SAT: 10am - 3pm</h3>
+                                    <h3 class="contact-heading">SUN: 10am - 3pm</h3>
+                                    <h3 class="contact-heading italic">*Hours subject to change</h3>
+                                    <h3 class="contact-heading italic">**All Sessions ONLINE</h3>
                                 </td>
                             </tr>
                         </tbody>
@@ -100,9 +101,9 @@
                         <tbody>
                             <tr class="contact-icons-row">
                                 <td class="contact-info icon-cell">
-                                <a href="mailto:yorkdurhamcounselling@gmail.com" target="_blank">
-                                    <img class="icon-image" src="images/email-icon.png" alt="Email">
-                                </a>
+                                    <a href="mailto:yorkdurhamcounselling@gmail.com" target="_blank">
+                                        <img class="icon-image" src="images/email-icon.png" alt="Email">
+                                    </a>
                                 </td>
                                 <td class="contact-info icon-cell">
                                     <a href="https://www.instagram.com/yorkdurhamcounselling/" target="_blank">
