--- a/ourmission.html
+++ b/ourmission.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="images/YD-icon.png">
+    <link rel="icon" href="images/YD-icon.png">
 
     <title>Our Mission | York Durham Counselling</title>
-    <link rel="stylesheet" href="css/index.css"/>
     <link rel="stylesheet" href="css/ourmission.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
     <div class="bubble-layer">
@@ -23,8 +23,8 @@
         <div class="bubble bubble-small" src="images/bubble.png"></div>
     </div>
 
-    <nav class="slide-menu">
-        <button class="slide-toggle" type="button" style="top:13rem;"></button>
+    <nav class="menu menu-slide">
+        <div class="slide-toggle" type="button" style="top:10.75rem;"></div>
         <a class="nav-option" href="index.html">Home</a>
         <a class="nav-option chosen-option" href="ourmission.html">Our Mission</a>
         <a class="nav-option" href="aboutus.html">About Us</a>
@@ -33,14 +33,14 @@
         <a class="nav-option" href="prices.html">Session Prices</a>
     </nav>
 
-    <table class="section-table mission-table" cellpadding="0" cellspacing="0">
+    <table class="section-table mission-table fix-gap" cellpadding="0" cellspacing="0">
     <tbody>
         <tr class="mission-row">
             <td class="mission-text-cell">
                 <h2 class="mission-heading">Our Mission</h2>
 
                 <p class="mission-intro"> Welcome to <strong>York Durham Counselling</strong>, where:</p>
-                <p class="section-subtitle mission-quote">“Compassionate client care meets expert therapy.”</p>
+                <p class="mission-quote">“Compassionate client care meets expert therapy.”</p>
                 <p class="mission-body">York Durham Counselling was created upon recognizing the barriers within mental health services, including long wait lists for service, insufficient resources, and limited effectiveness. We offer a level of expertise and experience that sets us apart from less experienced or newly trained therapists.</p>
                 <p class="mission-body">All of the therapists at York Durham Counselling are driven by a commitment to deliver the highest quality of therapy, ensuring that every client receives the care they need and deserve.</p>
             </td>
@@ -106,7 +106,7 @@
         <tbody>
             <tr class="section-row">
                 <td class="text-cell" colspan="2">
-                    <h2 class="section-title gap-fix">Contact & Location</h2>
+                    <h2 class="contact-title">Contact & Location</h2>
                 </td>
             </tr>
             <tr class="section-row">
@@ -135,9 +135,9 @@
                         <tbody>
                             <tr class="contact-icons-row">
                                 <td class="contact-info icon-cell">
-                                <a href="mailto:yorkdurhamcounselling@gmail.com" target="_blank">
-                                    <img class="icon-image" src="images/email-icon.png" alt="Email">
-                                </a>
+                                    <a href="mailto:yorkdurhamcounselling@gmail.com" target="_blank">
+                                        <img class="icon-image" src="images/email-icon.png" alt="Email">
+                                    </a>
                                 </td>
                                 <td class="contact-info icon-cell">
                                     <a href="https://www.instagram.com/yorkdurhamcounselling/" target="_blank">
