--- a/aboutus.html
+++ b/aboutus.html
@@ -4,23 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <meta name="description" content="Meet our expert team of Registered Social Workers at York Durham Counselling. Kim Sundal, Marnie Teitlebaum, and Jillian Hooper provide compassionate online therapy.">
+    <meta name="keywords" content="Kim Sundal, Marnie Teitlebaum, Jillian Hooper, York Durham Counselling Team, Therapists Thornhill">
+
     <link rel="icon" href="images/YD-icon.png">
 
-    <title>About Us | York Durham Counselling</title>
+    <title>Our Therapists | About York Durham Counselling</title>
+    
     <link rel="stylesheet" href="css/aboutus.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "HealthAndBeautyBusiness",
+      "name": "York Durham Counselling",
+      "url": "https://yourwebsite.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "6D-7398 Yonge Street, Unit #2061",
+        "addressLocality": "Thornhill",
+        "addressRegion": "ON",
+        "postalCode": "L4J 8J2",
+        "addressCountry": "CA"
+      },
+      "telephone": "289-588-3559",
+      "description": "Expert compassion-focused online therapy services provided by Registered Social Workers.",
+      "member": [
+        {
+          "@type": "Person",
+          "name": "Kim Sundal",
+          "jobTitle": "MSW, RSW"
+        },
+        {
+          "@type": "Person",
+          "name": "Marnie Teitlebaum",
+          "jobTitle": "MSW, RSW"
+        },
+        {
+          "@type": "Person",
+          "name": "Jillian Hooper",
+          "jobTitle": "MSW, RSW"
+        }
+      ]
+    }
+    </script>
 </head>
 <body>
     <div class="bubble-layer">
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
     </div>
 
     <nav class="menu menu-slide">
