--- a/prices.html
+++ b/prices.html
@@ -3,24 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="description" content="View session rates for York Durham Counselling. Transparent pricing for individual therapy, family counselling, and CBT programs in Thornhill, ON.">
+    <meta name="keywords" content="Therapy prices Thornhill, counselling rates Ontario, affordable therapy, individual counselling cost">
 
     <link rel="icon" href="images/YD-icon.png">
 
-    <title>Session Prices | York Durham Counselling</title>
+    <title>Session Prices & Rates | York Durham Counselling</title>
     <link rel="stylesheet" href="css/prices.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "HealthAndBeautyBusiness",
+      "name": "York Durham Counselling",
+      "url": "https://yourwebsite.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "6D-7398 Yonge Street, Unit #2061",
+        "addressLocality": "Thornhill",
+        "addressRegion": "ON",
+        "postalCode": "L4J 8J2",
+        "addressCountry": "CA"
+      },
+      "telephone": "289-588-3559",
+      "makesOffer": [
+        {
+          "@type": "Offer",
+          "itemOffered": { "@type": "Service", "name": "Individual Therapy" },
+          "price": "165.00",
+          "priceCurrency": "CAD"
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": { "@type": "Service", "name": "Family Counselling" },
+          "price": "190.00",
+          "priceCurrency": "CAD"
+        }
+      ]
+    }
+    </script>
 </head>
 <body>
     <div class="bubble-layer">
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
     </div>
 
     <div class="menu menu-slide">
@@ -42,7 +77,7 @@
                 <div class="pricing-card">
                     <div class="pricing-badge">1</div>
                     <h3 class="pricing-title">Individual Therapy Session</h3>
-                    <div class="pricing-price">165$</div>
+                    <div class="pricing-price">$165</div>
                     <div class="pricing-subtext">50 Minute Session</div>
                 </div>
             </td>
@@ -51,9 +86,9 @@
                 <div class="pricing-card">
                     <div class="pricing-badge">2</div>
                     <h3 class="pricing-title">Cognitive Behavioural Therapy Program</h3>
-                    <div class="pricing-price">165$ per 50 minute session</div>
+                    <div class="pricing-price">$165 per 50 minute session</div>
                     <div class="pricing-subtext">or</div>
-                    <div class="pricing-subtext">1500$ for block of 10 sessions</div>
+                    <div class="pricing-subtext">$1500 for block of 10 sessions</div>
                 </div>
             </td>
 
@@ -61,7 +96,7 @@
                 <div class="pricing-card">
                     <div class="pricing-badge">3</div>
                     <h3 class="pricing-title">Family Counselling Session</h3>
-                    <div class="pricing-price">190$</div>
+                    <div class="pricing-price">$190</div>
                     <div class="pricing-subtext">1 hour session</div>
                 </div>
             </td>
