--- a/resources.html
+++ b/resources.html
@@ -3,24 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="description" content="Access free 24/7 mental health resources and crisis support in Canada. York Durham Counselling provides tools like Kids Help Phone, Smiling Mind, and the 9-8-8 Helpline.">
+    <meta name="keywords" content="Mental Health Resources, Crisis Support Canada, 988 Helpline, Kids Help Phone, CBT Apps, York Durham Counselling">
 
     <link rel="icon" href="images/YD-icon.png">
 
-    <title>Mental Health Resources | York Durham Counselling</title>
+    <title>Mental Health Resources & Crisis Support | York Durham Counselling</title>
     <link rel="stylesheet" href="css/resources.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "HealthAndBeautyBusiness",
+      "name": "York Durham Counselling",
+      "url": "https://yourwebsite.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "6D-7398 Yonge Street, Unit #2061",
+        "addressLocality": "Thornhill",
+        "addressRegion": "ON",
+        "postalCode": "L4J 8J2",
+        "addressCountry": "CA"
+      },
+      "telephone": "289-588-3559"
+    }
+    </script>
 </head>
 <body>
     <div class="bubble-layer">
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
     </div>
 
     <div class="menu menu-slide">
@@ -44,6 +65,7 @@
                     <img src="images/kids-help-phone.jpg" alt="Kids Help Phone" class="mh-resource-icon">
                     <h3 class="mh-resource-title">Kids Help Phone</h3>
                     <p class="mh-resource-text">Canada’s only 24/7 e-mental health service for young people, offering free, confidential support by phone, text, and online resources.</p>
+                    <a class="visit-link" href="https://kidshelpphone.ca/" target="_blank" rel="noopener">Visit Kids Help Phone</a>
                 </div>
             </td>
 
@@ -52,6 +74,7 @@
                     <img src="images/smiling-mind.jpg" alt="Smiling Mind" class="mh-resource-icon">
                     <h3 class="mh-resource-title">Smiling Mind</h3>
                     <p class="mh-resource-text">A mindfulness app with dozens of guided practices designed by psychologists for both adults and children.</p>
+                    <a class="visit-link" href="https://www.smilingmind.com.au/" target="_blank" rel="noopener">Visit Smiling Mind</a>
                 </div>
             </td>
 
@@ -60,6 +83,7 @@
                     <img src="images/9-8-8.jpg" alt="9-8-8 Suicide Crisis Helpline" class="mh-resource-icon">
                     <h3 class="mh-resource-title">9-8-8 Suicide Crisis Helpline</h3>
                     <p class="mh-resource-text">Available 24/7 across Canada to support people thinking about suicide or worried about someone else.</p>
+                    <a class="visit-link" href="https://988.ca/" target="_blank" rel="noopener">Visit 9-8-8 Helpline</a>
                 </div>
             </td>
         </tr>
@@ -70,6 +94,7 @@
                     <img src="images/mind-shift.jpg" alt="MindShift CBT" class="mh-resource-icon">
                     <h3 class="mh-resource-title">MindShift CBT</h3>
                     <p class="mh-resource-text">A self-help app based on CBT strategies to help manage worry, panic, perfectionism, and social anxiety.</p>
+                    <a class="visit-link" href="https://mindshiftcbt.com/" target="_blank" rel="noopener">Visit MindShift CBT</a>
                 </div>
             </td>
 
@@ -78,6 +103,7 @@
                     <img src="images/hope-for-wellness.jpg" alt="Hope for Wellness Helpline" class="mh-resource-icon">
                     <h3 class="mh-resource-title">Hope for Wellness Helpline</h3>
                     <p class="mh-resource-text">Phone and online chat support available to all Indigenous peoples across Canada, with culturally competent counsellors.</p> 
+                    <a class="visit-link" href="https://www.hopeforwellness.ca/" target="_blank" rel="noopener">Visit Hope for Wellness</a>
                 </div>
             </td>
 
@@ -86,6 +112,7 @@
                     <img src="images/black-youth-helpline.jpg" alt="Black Youth Helpline" class="mh-resource-icon">
                     <h3 class="mh-resource-title">Black Youth Helpline</h3>
                     <p class="mh-resource-text">A multicultural helpline providing support for Black youth, families, and schools through counselling and referrals.</p>
+                    <a class="visit-link" href="https://blackyouth.ca/" target="_blank" rel="noopener">Visit Black Youth Helpline</a>
                 </div>
             </td>
         </tr>
