--- a/index.html
+++ b/index.html
@@ -3,24 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Professional online therapy & counselling in Thornhill, ON. York Durham Counselling offers expert mental health support with 20+ years of experience.">
+    <meta name="keywords" content="Therapy Thornhill, Online Counselling Ontario, York Durham Counselling, Anxiety Therapy">
 
     <link rel="icon" href="images/YD-icon.png">
     
-    <title>Home | York Durham Counselling</title>
+    <title>Online Therapy & Counselling Thornhill | York Durham Counselling</title>
+
     <link rel="stylesheet" href="css/index.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "HealthAndBeautyBusiness",
+      "name": "York Durham Counselling",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "6D-7398 Yonge Street, Unit #2061",
+        "addressLocality": "Thornhill",
+        "addressRegion": "ON",
+        "postalCode": "L4J 8J2",
+        "addressCountry": "CA"
+      },
+      "telephone": "289-588-3559",
+      "url": "https://yourwebsite.com"
+    }
+    </script>
 </head>
 <body>
     <div class="bubble-layer">
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
     </div>
 
     <div class="menu menu-slide">
@@ -41,7 +62,7 @@
                     <h3 class="home-subtitle">"Compassionate Client Care Meets Expert Therapy"</h3>
                 </td>
                 <td class="image-cell" width="50%" align="center">
-                    <img class="section-image logo-image" src="images/YD-logo.png">
+                    <img class="section-image logo-image" src="images/YD-logo.png" alt="York Durham Counselling Logo">
                 </td>
             </tr>
         </tbody>
@@ -51,7 +72,7 @@
         <tbody>
             <tr class="section-row">
                 <td class="image-cell" width="50%" align="center">
-                    <img class="section-image water-drop" src="images/water-drop.png" width="300">
+                    <img class="section-image water-drop" src="images/water-drop.png" alt="Water Drop Image">
                 </td>
 
                 <td class="text-cell" width="50%">
