--- a/services.html
+++ b/services.html
@@ -3,24 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="description" content="Explore our therapy services in Thornhill, ON. We specialize in Individual Therapy, Family Counselling, Child and Adolescent support, and CBT groups.">
+    <meta name="keywords" content="Individual Therapy Thornhill, Family Counselling Ontario, CBT Groups, Child Therapy, Adolescent Counselling">
 
     <link rel="icon" href="images/YD-icon.png">
 
-    <title>Therapy Services | York Durham Counselling</title>
+    <title>Therapy Services | Individual, Family & CBT | York Durham Counselling</title>
     <link rel="stylesheet" href="css/services.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "HealthAndBeautyBusiness",
+      "name": "York Durham Counselling",
+      "url": "https://yourwebsite.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "6D-7398 Yonge Street, Unit #2061",
+        "addressLocality": "Thornhill",
+        "addressRegion": "ON",
+        "postalCode": "L4J 8J2",
+        "addressCountry": "CA"
+      },
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Therapy Services",
+        "itemListElement": [
+          { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Individual Therapy" } },
+          { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Family Therapy" } },
+          { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Child and Adolescent Therapy" } },
+          { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Cognitive Behavioural Therapy (CBT)" } }
+        ]
+      }
+    }
+    </script>
 </head>
 <body>
     <div class="bubble-layer">
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
-        <div class="bubble bubble-large" src="images/bubble.png"></div>
-        <div class="bubble bubble-medium" src="images/bubble.png"></div>
-        <div class="bubble bubble-small" src="images/bubble.png"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
+        <div class="bubble bubble-large"></div>
+        <div class="bubble bubble-medium"></div>
+        <div class="bubble bubble-small"></div>
     </div>
 
     <div class="menu menu-slide">
