--- a/ourmission.html
+++ b/ourmission.html
@@ -176,29 +176,34 @@
 
                 <td class="text-cell">
                     <div class="form-box">
-                    <form id="bookingForm">
-                        <div class="form-grid">
-                            <div class="form-field">
-                                <label for="firstName">First Name</label>
-                                <input type="text" id="firstName" name="firstName" required="">
-                            </div>
-                            <div class="form-field">
-                                <label for="lastName">Last Name</label>
-                                <input type="text" id="lastName" name="lastName" required="">
-                            </div>
-                            <div class="form-field">
-                                <label for="email">Email</label> <input
-                                type="email" id="email" name="email" required=""></div>
-                            <div class="form-field">
-                                <label for="subject">Subject</label>
-                                <input type="text" id="subject" name="subject"></div>
-                            <div class="form-field full">
-                                <label for="message">Message</label>
-                                <textarea id="message" name="message" rows="3"></textarea>
-                            </div>
+                        <div class="thank-you-message">
+                            <h2>Thank You!</h2>
+                            <p>Your message has been sent successfully.</p>
                         </div>
-                        <button class="submit-btn" type="submit">Submit</button>
-                    </form>
+
+                        <form id="bookingForm">
+                            <div class="form-grid">
+                                <div class="form-field">
+                                    <label for="firstName">First Name</label>
+                                    <input type="text" id="firstName" name="firstName" required>
+                                </div>
+                                <div class="form-field">
+                                    <label for="lastName">Last Name</label>
+                                    <input type="text" id="lastName" name="lastName" required>
+                                </div>
+                                <div class="form-field">
+                                    <label for="email">Email</label> 
+                                    <input type="email" id="email" name="email" required></div>
+                                <div class="form-field">
+                                    <label for="subject">Subject</label>
+                                    <input type="text" id="subject" name="subject"></div>
+                                <div class="form-field full">
+                                    <label for="message">Message</label>
+                                    <textarea id="message" name="message" rows="3"></textarea>
+                                </div>
+                            </div>
+                            <button class="submit-btn" type="submit">Submit</button>
+                        </form>
                     </div>
                 </td>
             </tr>
