Update menu side bar to be centered with chosen option

--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" href="images/YD-icon.png">
 
-    <title>Our Therapists | About York Durham Counselling</title>
+    <title>Abous Us | York Durham Counselling</title>
     
     <link rel="stylesheet" href="css/aboutus.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
@@ -64,10 +64,14 @@
     </div>
 
     <nav class="menu menu-slide">
-        <div class="slide-toggle" type="button" style="top:20.75rem;"></div>
         <a class="nav-option" href="index.html">Home</a>
         <a class="nav-option" href="ourmission.html">Our Mission</a>
-        <a class="nav-option chosen-option" href="aboutus.html">About Us</a>
+
+        <div class="nav-option chosen-option">
+            <a class="chosen-option-text" href="aboutus.html">About Us</a>
+            <div class="slide-toggle" type="button"></div>
+        </div>
+        
         <a class="nav-option" href="services.html">Therapy Services</a>
         <a class="nav-option" href="resources.html">Mental Health Resources</a>
         <a class="nav-option" href="prices.html">Session Prices</a>
