--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" href="images/YD-icon.png">
     
-    <title>Online Therapy & Counselling Thornhill | York Durham Counselling</title>
+    <title>Therapy & Counselling | York Durham Counselling</title>
 
     <link rel="stylesheet" href="css/index.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
@@ -45,8 +45,11 @@
     </div>
 
     <div class="menu menu-slide">
-        <div class="slide-toggle" type="button" style="top:2.25rem;"></div>
-        <a class="nav-option chosen-option" href="index.html">Home</a>
+        <div class="nav-option chosen-option">
+            <a class="chosen-option-text" href="index.html">Home</a>
+            <button class="slide-toggle" type="button"></button>
+        </div>
+
         <a class="nav-option" href="ourmission.html">Our Mission</a>
         <a class="nav-option" href="aboutus.html">About Us</a>
         <a class="nav-option" href="services.html">Therapy Services</a>
