--- a/prices.html
+++ b/prices.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" href="images/YD-icon.png">
 
-    <title>Session Prices & Rates | York Durham Counselling</title>
+    <title>Session Prices | York Durham Counselling</title>
     <link rel="stylesheet" href="css/prices.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
 
@@ -59,13 +59,16 @@
     </div>
 
     <div class="menu menu-slide">
-        <div class="slide-toggle" type="button" style="top:48.5rem;"></div>
         <a class="nav-option" href="index.html">Home</a>
         <a class="nav-option" href="ourmission.html">Our Mission</a>
         <a class="nav-option" href="aboutus.html">About Us</a>
         <a class="nav-option" href="services.html">Therapy Services</a>
         <a class="nav-option" href="resources.html">Mental Health Resources</a>
-        <a class="nav-option chosen-option" href="prices.html">Session Prices</a>
+
+        <div class="nav-option chosen-option">
+            <a class="chosen-option-text" href="prices.html">Session Prices</a>
+            <div class="slide-toggle" type="button"></div>
+        </div>
     </div>
 
     <h1 class="pricing-heading">Session Prices</h1>
