--- a/ourmission.html
+++ b/ourmission.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" href="images/YD-icon.png">
 
-    <title>Our Mission | Expert Online Therapy | York Durham Counselling</title>
+    <title>Our Mission | York Durham Counselling</title>
     
     <link rel="stylesheet" href="css/ourmission.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
@@ -44,9 +44,13 @@
     </div>
 
     <nav class="menu menu-slide">
-        <div class="slide-toggle" type="button" style="top:11.5rem;"></div>
         <a class="nav-option" href="index.html">Home</a>
-        <a class="nav-option chosen-option" href="ourmission.html">Our Mission</a>
+
+        <div class="nav-option chosen-option">
+            <a class="chosen-option-text" href="ourmission.html">Our Mission</a>
+            <div class="slide-toggle" type="button"></div>
+        </div>
+
         <a class="nav-option" href="aboutus.html">About Us</a>
         <a class="nav-option" href="services.html">Therapy Services</a>
         <a class="nav-option" href="resources.html">Mental Health Resources</a>
