--- a/resources.html
+++ b/resources.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" href="images/YD-icon.png">
 
-    <title>Mental Health Resources & Crisis Support | York Durham Counselling</title>
+    <title>Mental Health Resources | York Durham Counselling</title>
     <link rel="stylesheet" href="css/resources.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
 
@@ -45,12 +45,16 @@
     </div>
 
     <div class="menu menu-slide">
-        <div class="slide-toggle" type="button" style="top:39.25rem;"></div>
         <a class="nav-option" href="index.html">Home</a>
         <a class="nav-option" href="ourmission.html">Our Mission</a>
         <a class="nav-option" href="aboutus.html">About Us</a>
         <a class="nav-option" href="services.html">Therapy Services</a>
-        <a class="nav-option chosen-option" href="resources.html">Mental Health Resources</a>
+
+        <div class="nav-option chosen-option">
+            <a class="chosen-option-text" href="resources.html">Mental Health Resources</a>
+            <div class="slide-toggle" type="button"></div>
+        </div>
+        
         <a class="nav-option" href="prices.html">Session Prices</a>
     </div>
 
