--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" href="images/YD-icon.png">
 
-    <title>Therapy Services | Individual, Family & CBT | York Durham Counselling</title>
+    <title>Therapy Services | York Durham Counselling</title>
     <link rel="stylesheet" href="css/services.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
 
@@ -54,11 +54,15 @@
     </div>
 
     <div class="menu menu-slide">
-        <div class="slide-toggle" type="button" style="top:30rem;"></div>
         <a class="nav-option" href="index.html">Home</a>
         <a class="nav-option" href="ourmission.html">Our Mission</a>
         <a class="nav-option" href="aboutus.html">About Us</a>
-        <a class="nav-option chosen-option" href="services.html">Therapy Services</a>
+        
+        <div class="nav-option chosen-option">
+            <a class="chosen-option-text" href="services.html">Therapy Services</a>
+            <div class="slide-toggle" type="button"></div>
+        </div>
+        
         <a class="nav-option" href="resources.html">Mental Health Resources</a>
         <a class="nav-option" href="prices.html">Session Prices</a>
     </div>
