Final slide menu updates

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </div>
 
     <div class="menu menu-slide">
-        <div class="nav-option chosen-option">
-            <a class="chosen-option-text" href="index.html">Home</a>
+        <div class="toggle-position">
+            <a class="nav-option chosen-option" href="index.html">Home</a>
             <button class="slide-toggle" type="button"></button>
         </div>
 
