--- a/ourmission.html
+++ b/ourmission.html
@@ -46,8 +46,8 @@
     <nav class="menu menu-slide">
         <a class="nav-option" href="index.html">Home</a>
 
-        <div class="nav-option chosen-option">
-            <a class="chosen-option-text" href="ourmission.html">Our Mission</a>
+        <div class="toggle-position">
+            <a class="nav-option chosen-option" href="ourmission.html">Our Mission</a>
             <div class="slide-toggle" type="button"></div>
         </div>
 
