--- a/resources.html
+++ b/resources.html
@@ -50,8 +50,8 @@
         <a class="nav-option" href="aboutus.html">About Us</a>
         <a class="nav-option" href="services.html">Therapy Services</a>
 
-        <div class="nav-option chosen-option">
-            <a class="chosen-option-text" href="resources.html">Mental Health Resources</a>
+        <div class="toggle-position">
+            <a class="nav-option chosen-option" href="resources.html">Mental Health Resources</a>
             <div class="slide-toggle" type="button"></div>
         </div>
         
