--- a/aboutus.html
+++ b/aboutus.html
@@ -67,8 +67,8 @@
         <a class="nav-option" href="index.html">Home</a>
         <a class="nav-option" href="ourmission.html">Our Mission</a>
 
-        <div class="nav-option chosen-option">
-            <a class="chosen-option-text" href="aboutus.html">About Us</a>
+        <div class="toggle-position">
+            <a class="nav-option chosen-option" href="aboutus.html">About Us</a>
             <div class="slide-toggle" type="button"></div>
         </div>
         
