--- a/prices.html
+++ b/prices.html
@@ -65,8 +65,8 @@
         <a class="nav-option" href="services.html">Therapy Services</a>
         <a class="nav-option" href="resources.html">Mental Health Resources</a>
 
-        <div class="nav-option chosen-option">
-            <a class="chosen-option-text" href="prices.html">Session Prices</a>
+        <div class="toggle-position">
+            <a class="nav-option chosen-option" href="prices.html">Session Prices</a>
             <div class="slide-toggle" type="button"></div>
         </div>
     </div>
