--- a/services.html
+++ b/services.html
@@ -58,8 +58,8 @@
         <a class="nav-option" href="ourmission.html">Our Mission</a>
         <a class="nav-option" href="aboutus.html">About Us</a>
         
-        <div class="nav-option chosen-option">
-            <a class="chosen-option-text" href="services.html">Therapy Services</a>
+        <div class="toggle-position">
+            <a class="nav-option chosen-option" href="services.html">Therapy Services</a>
             <div class="slide-toggle" type="button"></div>
         </div>
         
