Added more cards to the resources page and increased SEO

--- a/aboutus.html
+++ b/aboutus.html
@@ -17,9 +17,10 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "HealthAndBeautyBusiness",
+      "@type": "MedicalBusiness",
       "name": "York Durham Counselling",
-      "url": "https://yourwebsite.com",
+      "medicalSpecialty": "Psychotherapy",
+      "url": "https://yorkdurhamcounselling.site",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "6D-7398 Yonge Street, Unit #2061",
@@ -28,7 +29,7 @@
         "postalCode": "L4J 8J2",
         "addressCountry": "CA"
       },
-      "telephone": "289-588-3559",
+      "telephone": "+1-289-588-3559",
       "description": "Expert compassion-focused online therapy services provided by Registered Social Workers.",
       "member": [
         {
