--- a/ourmission.html
+++ b/ourmission.html
@@ -15,8 +15,9 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "HealthAndBeautyBusiness",
+      "@type": "MedicalBusiness",
       "name": "York Durham Counselling",
+      "medicalSpecialty": "Psychotherapy",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "6D-7398 Yonge Street, Unit #2061",
@@ -25,8 +26,8 @@
         "postalCode": "L4J 8J2",
         "addressCountry": "CA"
       },
-      "telephone": "289-588-3559",
-      "url": "https://yourwebsite.com"
+      "telephone": "+1-289-588-3559",
+      "url": "https://yorkdurhamcounselling.site"
     }
     </script>
 </head>
