--- a/prices.html
+++ b/prices.html
@@ -16,9 +16,10 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "HealthAndBeautyBusiness",
+      "@type": "MedicalBusiness",
       "name": "York Durham Counselling",
-      "url": "https://yourwebsite.com",
+      "medicalSpecialty": "Psychotherapy",
+      "url": "https://yorkdurhamcounselling.site",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "6D-7398 Yonge Street, Unit #2061",
@@ -27,7 +28,7 @@
         "postalCode": "L4J 8J2",
         "addressCountry": "CA"
       },
-      "telephone": "289-588-3559",
+      "telephone": "+1-289-588-3559",
       "makesOffer": [
         {
           "@type": "Offer",
@@ -39,6 +40,12 @@
           "@type": "Offer",
           "itemOffered": { "@type": "Service", "name": "Family Counselling" },
           "price": "190.00",
+          "priceCurrency": "CAD"
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": { "@type": "Service", "name": "Cognitive Behavioural Therapy" },
+          "price": "165.00",
           "priceCurrency": "CAD"
         }
       ]
