--- a/resources.html
+++ b/resources.html
@@ -16,9 +16,10 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "HealthAndBeautyBusiness",
+      "@type": "MedicalBusiness",
       "name": "York Durham Counselling",
-      "url": "https://yourwebsite.com",
+      "medicalSpecialty": "Psychotherapy",
+      "url": "https://yorkdurhamcounselling.site",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "6D-7398 Yonge Street, Unit #2061",
@@ -27,7 +28,7 @@
         "postalCode": "L4J 8J2",
         "addressCountry": "CA"
       },
-      "telephone": "289-588-3559"
+      "telephone": "+1-289-588-3559"
     }
     </script>
 </head>
@@ -68,7 +69,7 @@
                 <div class="mh-resource-card">
                     <img src="images/kids-help-phone.jpg" alt="Kids Help Phone" class="mh-resource-icon">
                     <h3 class="mh-resource-title">Kids Help Phone</h3>
-                    <p class="mh-resource-text">Canada’s only 24/7 e-mental health service for young people, offering free, confidential support by phone, text, and online resources.</p>
+                    <p class="mh-resource-text">24/7 e-mental health service for young people, offering free, confidential support by phone, text, and online resources.</p>
                     <a class="visit-link" href="https://kidshelpphone.ca/" target="_blank" rel="noopener">Visit Kids Help Phone</a>
                 </div>
             </td>
@@ -117,6 +118,35 @@
                     <h3 class="mh-resource-title">Black Youth Helpline</h3>
                     <p class="mh-resource-text">A multicultural helpline providing support for Black youth, families, and schools through counselling and referrals.</p>
                     <a class="visit-link" href="https://blackyouth.ca/" target="_blank" rel="noopener">Visit Black Youth Helpline</a>
+                </div>
+            </td>
+        </tr>
+
+        <tr class="mh-resource-row">
+            <td class="mh-resource-cell">
+                <div class="mh-resource-card">
+                    <img src="images/LGBT-youth-line.jpg" alt="LGBT Youth Line" class="mh-resource-icon">
+                    <h3 class="mh-resource-title">LGBT Youth Line</h3>
+                    <p class="mh-resource-text">Canada’s peer-supported helpline for 2SLGBTQ+ youth, offering free, confidential emotional support by phone, text, chat, and online resources.</p>
+                    <a class="visit-link" href="https://youthline.ca/" target="_blank" rel="noopener">Visit LGBT Youth Line</a>
+                </div>
+            </td>
+
+            <td class="mh-resource-cell">
+                <div class="mh-resource-card">
+                    <img src="images/310-cope.jpg" alt="310 Cope" class="mh-resource-icon">
+                    <h3 class="mh-resource-title">310 Cope</h3>
+                    <p class="mh-resource-text">Toronto’s 24/7 emotional support line, providing free, confidential crisis and distress support by phone for individuals experiencing emotional difficulty.</p>
+                    <a class="visit-link" href="https://yssn.ca/crisis-services/310-cope/" target="_blank" rel="noopener">Visit 310 Cope</a>
+                </div>
+            </td>
+
+            <td class="mh-resource-cell">
+                <div class="mh-resource-card">
+                    <img src="images/anxiety-canada.jpg" alt="Anxiety Canada" class="mh-resource-icon">
+                    <h3 class="mh-resource-title">Anxiety Canada</h3>
+                    <p class="mh-resource-text">Canada’s national anxiety support organization, offering free, evidence-based resources, self-help tools, and programs to help individuals understand and manage anxiety.</p>
+                    <a class="visit-link" href="https://www.anxietycanada.com/" target="_blank" rel="noopener">Visit Anxiety Canada</a>
                 </div>
             </td>
         </tr>
