--- a/services.html
+++ b/services.html
@@ -16,9 +16,10 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "HealthAndBeautyBusiness",
+      "@type": "MedicalBusiness",
       "name": "York Durham Counselling",
-      "url": "https://yourwebsite.com",
+      "medicalSpecialty": "Psychotherapy",
+      "url": "https://yorkdurhamcounselling.site",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "6D-7398 Yonge Street, Unit #2061",
@@ -27,6 +28,7 @@
         "postalCode": "L4J 8J2",
         "addressCountry": "CA"
       },
+      "telephone": "+1-289-588-3559",
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
         "name": "Therapy Services",
