Added 'All Sessions are Online' to services subpage

--- a/services.html
+++ b/services.html
@@ -73,6 +73,10 @@
         <h1 class="services-heading">Therapy Services</h1>
     </div>
 
+    <div class="services-subheading-wrapper">
+        <p class="services-subheading">*All Sessions are Online*</p>
+    </div>
+
     <table class="section-table services-table">
     <tr>
         <td class="service-cell">
