--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <tbody>
             <tr class="section-row">
                 <td class="text-cell" width="50%">
-                    <h2 class="home-title">Welcome to York Durham Counselling!</h2>
+                    <h2 class="home-title">Welcome to York Durham Counselling</h2>
                     <h3 class="home-subtitle">"Compassionate Client Care Meets Expert Therapy"</h3>
                 </td>
                 <td class="image-cell" width="50%" align="center">
